# india-toolkit

./: CULTURAL_SENSITIVITY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: legal_database.json  major_operators.json  rti_directory.json
india/: __init__.py  cli.py
india/amul/: __init__.py  amul_research.py  narrative_generator.py
india/campus/: __init__.py  bangalore_hub.py  campus_toolkit.py
india/content/: __init__.py  cultural_framing.py  hindi_translator.py
india/content/content_templates/: whatsapp_dairy_facts.txt  whatsapp_water_crisis.txt
india/legal/: __init__.py  pil_research.py  pil_templates.py
india/mapping/: __init__.py  facility_mapper.py  pollution_overlay.py
india/rti/: __init__.py  rti_generator.py  rti_tracker.py
india/rti/rti_templates/: awbi_inspection.txt  fssai_violations.txt  pollution_board.txt  slaughterhouse_licenses.txt  subsidy_data.txt
tests/: test_rti.py
